[package]
name = "speakboard-be-sherpa"
version = "0.1.0"
edition = "2024"
default-run = "speakboard-be-sherpa"

[dependencies]
# Server
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sherpa-rs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

# Shared (server + client)
anyhow = "1"
tokio-tungstenite = "0.28"

# Model auto-download
ureq = "2"
bzip2 = "0.4"
tar = "0.4"

# CLI test client
cpal = "0.15"
crossterm = "0.28"
